Adds multi-time event example

--- a/src/materials/structures/03-site-header/02-demo-notice.html
+++ b/src/materials/structures/03-site-header/02-demo-notice.html
@@ -3,7 +3,7 @@ notes: |
   For example, you can use the `.navbar-alert` component to flash demo notices.
 ---
 <div class="navbar navbar-default">
-  <div class="navbar-alert">This is a demonstration version of Apps4Clubz. Your demo will continue fully function for 20 more days.</div>
+  <div class="navbar-alert">This is a demonstration version of Apps4Clubz. Your demo will continue to fully function for 20 more days.</div>
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Club Stabertson</a>
     <div class="navbar-right">
