--- a/src/materials/structures/04-page-headers/04-page-headers.html
+++ b/src/materials/structures/04-page-headers/04-page-headers.html
@@ -8,9 +8,10 @@ notes: |
     <div class="btn-group">
       <button type="button" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Create New</button>
     </div>
-    <div class="input-group">
+    <div class="input-group has-clear">
       <span class="input-group-addon"><i class="fa fa-search"></i></span>
       <input type="text" class="form-control" placeholder="Filter Messages">
+      <i class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden text-muted"></i>
     </div>
   </div>
   <h2>Messages</h2>
