Use Glyphicons instead of FA

--- a/src/materials/structures/03-site-header/03-outstanding-payment.html
+++ b/src/materials/structures/03-site-header/03-outstanding-payment.html
@@ -7,8 +7,8 @@ notes: |
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Club Stabertson</a>
     <div class="navbar-right">
-      <a class="btn btn-danger navbar-btn" title="Payment Info"><i class="fa fa-lg fa-credit-card"></i></a>
-      <a class="btn btn-link navbar-btn" title="Log Out"><i class="fa fa-lg fa-key"></i></a>&nbsp;
+      <a class="btn btn-danger navbar-btn" title="Payment Info"><span class="glyphicon glyphicon-usd"></span></a>
+      <a class="btn btn-link navbar-btn" title="Log Out"><span class="glyphicon glyphicon-log-out"></span></a>&nbsp;
     </div>
   </div>
 </div>
