--- a/src/materials/structures/04-page-headers/04-page-headers.html
+++ b/src/materials/structures/04-page-headers/04-page-headers.html
@@ -6,12 +6,12 @@ notes: |
 <div class="page-header admin-section-header">
   <div class="btn-toolbar">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Create New</button>
+      <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus-sign"></span> Create New</button>
     </div>
     <div class="input-group has-clear">
-      <span class="input-group-addon"><i class="fa fa-search"></i></span>
-      <input type="text" class="form-control" placeholder="Filter Messages">
-      <i class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden text-muted"></i>
+      <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+      <input type="search" class="form-control" placeholder="Filter Messages">
+      <span class="form-control-clear glyphicon glyphicon-remove text-muted form-control-feedback hidden"></span>
     </div>
   </div>
   <h2>Messages</h2>
