Links to the appropriate places

--- a/src/materials/structures/02-cards/01-card.html
+++ b/src/materials/structures/02-cards/01-card.html
@@ -2,7 +2,7 @@
 notes: |
   A card is a self-contained unit that serves as an entry point to more detailed information. Cards display content composed of different elements whose size or supported actions vary. Cards can contain a varied amount of elements, and can exist ajacent to one another with varying levels of data.
 
-  <a href="cards-example.html">See some specific examples of cards</a> and how data for each module should be displayed.
+  <div class="alert alert-success"><i class="glyphicon glyphicon-info-sign"></i>&nbsp; <a href="cards-example.html">See some specific examples of cards</a> and how data for each module should be displayed.</div>
 ---
 
 <div class="card">
